// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Composite/CardList Default 1`] = `
<div>
  <div
    className="sc-gqjmRU kZidTY"
  >
    Default
    <hr />
  </div>
  <div
    className="sc-jTzLTM eeedqI"
    style={
      Object {
        "borderWidth": "0rem",
        "height": "8.3rem",
      }
    }
  />
  <div>
    <div
      style={
        Object {
          "height": "0rem",
          "opacity": 0,
          "transform": "translateX(8rem)",
        }
      }
    >
      <div
        className="sc-EHOje byzvOr"
        style={
          Object {
            "height": "8rem",
          }
        }
      >
        <div
          className="sc-bZQynM jzLdNW"
          style={
            Object {
              "width": "8rem",
            }
          }
        >
          <div
            className="sc-dnqmqq kqTqqP"
            style={
              Object {
                "fontSize": "4rem",
              }
            }
          >
            12X
          </div>
        </div>
        <div
          className="sc-htoDjs dRcTZd"
          style={
            Object {
              "lineHeight": "1.25",
            }
          }
        >
          <div
            className="sc-iwsKbI jzKbeF"
          >
            20:12
          </div>
          <div
            className="sc-gZMcBi ceWbWy"
          >
            Towards Leamington
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "0rem",
          "opacity": 0,
          "transform": "translateX(8rem)",
        }
      }
    >
      <div
        className="sc-EHOje byzvOr"
        style={
          Object {
            "height": "8rem",
          }
        }
      >
        <div
          className="sc-bZQynM jzLdNW"
          style={
            Object {
              "width": "8rem",
            }
          }
        >
          <img
            className="sc-gzVnrw dUtZaE"
            src="https://media.radio.warwick.ac.uk/shows/5010.large.jpg"
          />
        </div>
        <div
          className="sc-htoDjs dRcTZd"
          style={
            Object {
              "lineHeight": "1.25",
            }
          }
        >
          <div
            className="sc-iwsKbI jzKbeF"
          >
            Psychademics
          </div>
          <div
            className="sc-gZMcBi ceWbWy"
          >
            20:00 - 21:00
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "0rem",
          "opacity": 0,
          "transform": "translateX(8rem)",
        }
      }
    >
      <div
        className="sc-EHOje byzvOr"
        style={
          Object {
            "height": "8rem",
          }
        }
      >
        <div
          className="sc-bZQynM jzLdNW"
          style={
            Object {
              "width": "8rem",
            }
          }
        >
          <img
            className="sc-gzVnrw dUtZaE"
            src="https://images-na.ssl-images-amazon.com/images/I/A1gZc70vUIL._SL1500_.jpg"
          />
        </div>
        <div
          className="sc-htoDjs dRcTZd"
          style={
            Object {
              "lineHeight": "1.25",
            }
          }
        >
          <div
            className="sc-iwsKbI jzKbeF"
          >
            Feels Like We Only Go Backwards (Special Edition)
          </div>
          <div
            className="sc-gZMcBi ceWbWy"
          >
            Tame Impala
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Composite/CardList Empty 1`] = `
<div>
  <div
    className="sc-gqjmRU kZidTY"
  >
    Empty
    <hr />
  </div>
  <div
    className="sc-jTzLTM eeedqI"
    style={
      Object {
        "borderWidth": "0rem",
        "height": "8.3rem",
      }
    }
  >
    <div
      className="sc-VigVT evwndT"
    >
      Nothing To Show
    </div>
  </div>
  <div />
</div>
`;

exports[`Storyshots Composite/CardList Highlighted 1`] = `
<div>
  <div
    className="sc-gqjmRU kZidTY"
  >
    Highlighted
    <hr />
  </div>
  <div
    className="sc-jTzLTM eeedqI"
    style={
      Object {
        "borderWidth": "0.2rem",
        "height": "8.3rem",
      }
    }
  />
  <div>
    <div
      style={
        Object {
          "height": "0rem",
          "opacity": 0,
          "transform": "translateX(8rem)",
        }
      }
    >
      <div
        className="sc-EHOje byzvOr"
        style={
          Object {
            "height": "8rem",
          }
        }
      >
        <div
          className="sc-bZQynM jzLdNW"
          style={
            Object {
              "width": "8rem",
            }
          }
        >
          <div
            className="sc-dnqmqq kqTqqP"
            style={
              Object {
                "fontSize": "4rem",
              }
            }
          >
            12X
          </div>
        </div>
        <div
          className="sc-htoDjs dRcTZd"
          style={
            Object {
              "lineHeight": "1.25",
            }
          }
        >
          <div
            className="sc-iwsKbI jzKbeF"
          >
            11:31
          </div>
          <div
            className="sc-gZMcBi ceWbWy"
          >
            Towards Coventry
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "0rem",
          "opacity": 0,
          "transform": "translateX(8rem)",
        }
      }
    >
      <div
        className="sc-EHOje byzvOr"
        style={
          Object {
            "height": "8rem",
          }
        }
      >
        <div
          className="sc-bZQynM jzLdNW"
          style={
            Object {
              "width": "8rem",
            }
          }
        >
          <img
            className="sc-gzVnrw dUtZaE"
            src="https://media.radio.warwick.ac.uk/shows/5047.large.jpg"
          />
        </div>
        <div
          className="sc-htoDjs dRcTZd"
          style={
            Object {
              "lineHeight": "1.25",
            }
          }
        >
          <div
            className="sc-iwsKbI jzKbeF"
          >
            The Acoustic Lounge
          </div>
          <div
            className="sc-gZMcBi ceWbWy"
          >
            11:00 - 12:00
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "0rem",
          "opacity": 0,
          "transform": "translateX(8rem)",
        }
      }
    >
      <div
        className="sc-EHOje byzvOr"
        style={
          Object {
            "height": "8rem",
          }
        }
      >
        <div
          className="sc-bZQynM jzLdNW"
          style={
            Object {
              "width": "8rem",
            }
          }
        >
          <img
            className="sc-gzVnrw dUtZaE"
            src="https://images-na.ssl-images-amazon.com/images/I/A1LVEJikmZL._SL1500_.jpg"
          />
        </div>
        <div
          className="sc-htoDjs dRcTZd"
          style={
            Object {
              "lineHeight": "1.25",
            }
          }
        >
          <div
            className="sc-iwsKbI jzKbeF"
          >
            New Person (Same Old Mistakes)
          </div>
          <div
            className="sc-gZMcBi ceWbWy"
          >
            Tame Impala
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Composite/CardList Mixed 1`] = `
<div>
  <div
    className="sc-gqjmRU kZidTY"
  >
    Mixed
    <hr />
  </div>
  <div
    className="sc-jTzLTM eeedqI"
    style={
      Object {
        "borderWidth": "0rem",
        "height": "8.3rem",
      }
    }
  />
  <div>
    <div
      style={
        Object {
          "height": "0rem",
          "opacity": 0,
          "transform": "translateX(8rem)",
        }
      }
    >
      <div
        className="sc-EHOje byzvOr"
        style={
          Object {
            "height": "8rem",
          }
        }
      >
        <div
          className="sc-bZQynM jzLdNW"
          style={
            Object {
              "width": "8rem",
            }
          }
        >
          <div
            className="sc-dnqmqq kqTqqP"
            style={
              Object {
                "fontSize": "4rem",
              }
            }
          >
            12X
          </div>
        </div>
        <div
          className="sc-htoDjs dRcTZd"
          style={
            Object {
              "lineHeight": "1.25",
            }
          }
        >
          <div
            className="sc-iwsKbI jzKbeF"
          >
            17:02
          </div>
          <div
            className="sc-gZMcBi ceWbWy"
          >
            Towards Leamington
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "0rem",
          "opacity": 0,
          "transform": "translateX(8rem)",
        }
      }
    >
      <div
        className="sc-EHOje byzvOr"
        style={
          Object {
            "height": "6rem",
          }
        }
      >
        <div
          className="sc-bZQynM jzLdNW"
          style={
            Object {
              "width": "6rem",
            }
          }
        >
          <img
            className="sc-gzVnrw dUtZaE"
            src="https://media.radio.warwick.ac.uk/shows/5100.large.jpg"
          />
        </div>
        <div
          className="sc-htoDjs dRcTZd"
          style={
            Object {
              "lineHeight": "1",
            }
          }
        >
          <div
            className="sc-iwsKbI jzKbeF"
          >
            The Italian Football Show
          </div>
          <div
            className="sc-gZMcBi ceWbWy"
          >
            17:00 - 18:00
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "0rem",
          "opacity": 0,
          "transform": "translateX(8rem)",
        }
      }
    >
      <div
        className="sc-EHOje byzvOr"
        style={
          Object {
            "height": "6rem",
          }
        }
      >
        <div
          className="sc-bZQynM jzLdNW"
          style={
            Object {
              "width": "6rem",
            }
          }
        >
          <img
            className="sc-gzVnrw dUtZaE"
            src="https://i.ytimg.com/vi/hNJOI2dtDZ4/maxresdefault.jpg"
          />
        </div>
        <div
          className="sc-htoDjs dRcTZd"
          style={
            Object {
              "lineHeight": "1",
            }
          }
        >
          <div
            className="sc-iwsKbI jzKbeF"
          >
            Borderline
          </div>
          <div
            className="sc-gZMcBi ceWbWy"
          >
            Tame Impala
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Composite/CardList Slim 1`] = `
<div>
  <div
    className="sc-gqjmRU kZidTY"
  >
    Slim
    <hr />
  </div>
  <div
    className="sc-jTzLTM eeedqI"
    style={
      Object {
        "borderWidth": "0rem",
        "height": "6.3rem",
      }
    }
  />
  <div>
    <div
      style={
        Object {
          "height": "0rem",
          "opacity": 0,
          "transform": "translateX(8rem)",
        }
      }
    >
      <div
        className="sc-EHOje byzvOr"
        style={
          Object {
            "height": "6rem",
          }
        }
      >
        <div
          className="sc-bZQynM jzLdNW"
          style={
            Object {
              "width": "6rem",
            }
          }
        >
          <div
            className="sc-dnqmqq kqTqqP"
            style={
              Object {
                "fontSize": "3rem",
              }
            }
          >
            U1
          </div>
        </div>
        <div
          className="sc-htoDjs dRcTZd"
          style={
            Object {
              "lineHeight": "1",
            }
          }
        >
          <div
            className="sc-iwsKbI jzKbeF"
          >
            19:25
          </div>
          <div
            className="sc-gZMcBi ceWbWy"
          >
            Towards Coventry
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "0rem",
          "opacity": 0,
          "transform": "translateX(8rem)",
        }
      }
    >
      <div
        className="sc-EHOje byzvOr"
        style={
          Object {
            "height": "6rem",
          }
        }
      >
        <div
          className="sc-bZQynM jzLdNW"
          style={
            Object {
              "width": "6rem",
            }
          }
        >
          <img
            className="sc-gzVnrw dUtZaE"
            src="https://media.radio.warwick.ac.uk/shows/5163.large.jpg"
          />
        </div>
        <div
          className="sc-htoDjs dRcTZd"
          style={
            Object {
              "lineHeight": "1",
            }
          }
        >
          <div
            className="sc-iwsKbI jzKbeF"
          >
            ReggaetÓN
          </div>
          <div
            className="sc-gZMcBi ceWbWy"
          >
            19:00 - 20:00
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "0rem",
          "opacity": 0,
          "transform": "translateX(8rem)",
        }
      }
    >
      <div
        className="sc-EHOje byzvOr"
        style={
          Object {
            "height": "6rem",
          }
        }
      >
        <div
          className="sc-bZQynM jzLdNW"
          style={
            Object {
              "width": "6rem",
            }
          }
        >
          <img
            className="sc-gzVnrw dUtZaE"
            src="http://www.brooklynvegan.com/files/2019/03/tame-impala-patience.jpg"
          />
        </div>
        <div
          className="sc-htoDjs dRcTZd"
          style={
            Object {
              "lineHeight": "1",
            }
          }
        >
          <div
            className="sc-iwsKbI jzKbeF"
          >
            Patience
          </div>
          <div
            className="sc-gZMcBi ceWbWy"
          >
            Tame Impala
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Simple/Button Default 1`] = `
<div
  className="sc-htpNat hriTYS"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "boxShadow": "0px 0px 0px 0px rgba(0, 0, 0, 0)",
      "transform": "translateY(0px)",
    }
  }
>
  <div>
    <div
      className="sc-bxivhb hJcVJR"
    >
      Click Me!
    </div>
  </div>
</div>
`;

exports[`Storyshots Simple/Button Disabled 1`] = `
<div
  className="sc-htpNat gquIDs"
  disabled={true}
  onClick={null}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "boxShadow": "0px 0px 0px 0px rgba(0, 0, 0, 0)",
      "transform": "translateY(0px)",
    }
  }
>
  <div>
    <div
      className="sc-bxivhb hJcVJR"
    >
      You Can't Click Me :(
    </div>
  </div>
</div>
`;

exports[`Storyshots Simple/Button Loading 1`] = `
<div
  className="sc-htpNat hriTYS"
  onClick={null}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "boxShadow": "0px 0px 0px 0px rgba(0, 0, 0, 0)",
      "transform": "translateY(0px)",
    }
  }
>
  <div
    className="sc-bdVaJa bNlOCv"
  >
    <div
      className="sc-bwzfXH ghagIV"
      size={0.5}
    />
    <div
      className="sc-bwzfXH bvVunS"
      size={0.5}
    />
    <div
      className="sc-bwzfXH kZQvcK"
      size={0.5}
    />
  </div>
</div>
`;

exports[`Storyshots Simple/Button With Icon & Text 1`] = `
<div
  className="sc-htpNat hriTYS"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "boxShadow": "0px 0px 0px 0px rgba(0, 0, 0, 0)",
      "transform": "translateY(0px)",
    }
  }
>
  <div>
    <div
      className="sc-bxivhb hJcVJR"
    >
      Click Me!
    </div>
    <i
      className="sc-ifAKCX eQYFnI"
    >
      fingerprint
    </i>
  </div>
</div>
`;

exports[`Storyshots Simple/Button With Icon 1`] = `
<div
  className="sc-htpNat hriTYS"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "boxShadow": "0px 0px 0px 0px rgba(0, 0, 0, 0)",
      "transform": "translateY(0px)",
    }
  }
>
  <div>
    <i
      className="sc-ifAKCX eQYFnI"
    >
      fingerprint
    </i>
  </div>
</div>
`;

exports[`Storyshots Simple/Card Default 1`] = `
<div
  style={
    Object {
      "marginTop": "1rem",
    }
  }
>
  <div
    className="sc-EHOje byzvOr"
    style={
      Object {
        "height": "8rem",
      }
    }
  >
    <div
      className="sc-bZQynM jzLdNW"
      style={
        Object {
          "width": "8rem",
        }
      }
    >
      <div
        className="sc-dnqmqq kqTqqP"
        style={
          Object {
            "fontSize": "4rem",
          }
        }
      >
        12X
      </div>
    </div>
    <div
      className="sc-htoDjs dRcTZd"
      style={
        Object {
          "lineHeight": "1.25",
        }
      }
    >
      <div
        className="sc-iwsKbI jzKbeF"
      >
        20:12
      </div>
      <div
        className="sc-gZMcBi ceWbWy"
      >
        Towards leamington
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Simple/Card No Hero 1`] = `
<div
  style={
    Object {
      "marginTop": "1rem",
    }
  }
>
  <div
    className="sc-EHOje byzvOr"
    style={
      Object {
        "height": "8rem",
      }
    }
  >
    <div
      className="sc-htoDjs dRcTZd"
      style={
        Object {
          "lineHeight": "1.25",
        }
      }
    >
      <div
        className="sc-iwsKbI jzKbeF"
      >
        Title
      </div>
      <div
        className="sc-gZMcBi ceWbWy"
      >
        Subtitle
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Simple/Card Slim 1`] = `
<div
  style={
    Object {
      "marginTop": "1rem",
    }
  }
>
  <div
    className="sc-EHOje byzvOr"
    style={
      Object {
        "height": "6rem",
      }
    }
  >
    <div
      className="sc-bZQynM jzLdNW"
      style={
        Object {
          "width": "6rem",
        }
      }
    >
      <img
        className="sc-gzVnrw dUtZaE"
        src="https://media.radio.warwick.ac.uk/shows/5010.large.jpg"
      />
    </div>
    <div
      className="sc-htoDjs dRcTZd"
      style={
        Object {
          "lineHeight": "1",
        }
      }
    >
      <div
        className="sc-iwsKbI jzKbeF"
      >
        Psychademics
      </div>
      <div
        className="sc-gZMcBi ceWbWy"
      >
        20:00 - 21:00
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Simple/Card With Image 1`] = `
<div
  style={
    Object {
      "marginTop": "1rem",
    }
  }
>
  <div
    className="sc-EHOje byzvOr"
    style={
      Object {
        "height": "8rem",
      }
    }
  >
    <div
      className="sc-bZQynM jzLdNW"
      style={
        Object {
          "width": "8rem",
        }
      }
    >
      <img
        className="sc-gzVnrw dUtZaE"
        src="https://media.radio.warwick.ac.uk/shows/5010.large.jpg"
      />
    </div>
    <div
      className="sc-htoDjs dRcTZd"
      style={
        Object {
          "lineHeight": "1.25",
        }
      }
    >
      <div
        className="sc-iwsKbI jzKbeF"
      >
        Psychademics
      </div>
      <div
        className="sc-gZMcBi ceWbWy"
      >
        20:00 - 21:00
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Simple/Card With Long Text 1`] = `
<div
  style={
    Object {
      "marginTop": "1rem",
    }
  }
>
  <div
    className="sc-EHOje byzvOr"
    style={
      Object {
        "height": "8rem",
      }
    }
  >
    <div
      className="sc-bZQynM jzLdNW"
      style={
        Object {
          "width": "8rem",
        }
      }
    >
      <img
        className="sc-gzVnrw dUtZaE"
        src="https://images-na.ssl-images-amazon.com/images/I/A1gZc70vUIL._SL1500_.jpg"
      />
    </div>
    <div
      className="sc-htoDjs dRcTZd"
      style={
        Object {
          "lineHeight": "1.25",
        }
      }
    >
      <div
        className="sc-iwsKbI jzKbeF"
      >
        Feels Like We Only Go Backwards (Special Edition)
      </div>
      <div
        className="sc-gZMcBi ceWbWy"
      >
        Tame Impala
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Simple/Headline Default 1`] = `
<div
  className="sc-gqjmRU kZidTY"
>
  Big Important Text
  <hr />
</div>
`;

exports[`Storyshots Simple/ImageCycle Default 1`] = `
<div
  className="sc-fjdhpX kPvvJt"
  style={
    Object {
      "backgroundImage": "url('https://dev.radio.warwick.ac.uk/status/images/main.jpg')",
      "opacity": 0,
      "transform": "scale(0.8)",
    }
  }
/>
`;

exports[`Storyshots Simple/ImageCycle No Animation 1`] = `
<div
  className="sc-fjdhpX kPvvJt"
  style={
    Object {
      "backgroundImage": "url('https://webcams.radio.warwick.ac.uk/st1-dj.jpg?force_fetch=965931720000')",
      "opacity": 1,
      "transform": "scale(1)",
    }
  }
/>
`;

exports[`Storyshots Simple/Loader Default 1`] = `
<div
  className="sc-bdVaJa bNlOCv"
>
  <div
    className="sc-bwzfXH bYnxHq"
    size={1}
  />
  <div
    className="sc-bwzfXH hnAMwj"
    size={1}
  />
  <div
    className="sc-bwzfXH iZsKlc"
    size={1}
  />
</div>
`;

exports[`Storyshots Simple/Message Default 1`] = `
<div
  style={
    Object {
      "marginTop": "1rem",
    }
  }
>
  <div
    className="sc-jzJRlG Bami"
  >
    <div
      className="sc-cSHVUG eAqKPt"
    >
      <img
        className="sc-kAzzGY fqwChY"
        src="https://seeklogo.com/images/T/twitter-2012-negative-logo-5C6C1F1521-seeklogo.com.png"
      />
      <div
        className="sc-chPdSV bohLky"
      >
        <div
          className="sc-kgoBCf eUMLyR"
        >
          Student Radio Assoc.
        </div>
        <div
          className="sc-kGXeez eEJNlM"
        >
          @SRA
        </div>
      </div>
    </div>
    <div
      className="sc-kpOJdX dQjeSN"
    >
      @RAW1251AM have a Show Development Team.

They develop shows.

And get nominated for #ILSR awards 

🙌THIS https://t.co/CbsjmYzx39
    </div>
  </div>
</div>
`;

exports[`Storyshots Simple/Table Default 1`] = `
<table
  className="sc-dxgOiQ jiaWpt"
>
  <tbody>
    <tr>
      <th
        className="sc-ckVGcZ bcNAZB"
      />
      <th
        className="sc-ckVGcZ bcNAZB"
      >
        Studio 2
      </th>
      <th
        className="sc-ckVGcZ bcNAZB"
      >
        Tascam
      </th>
    </tr>
    <tr>
      <td
        className="sc-jKJlTe kwLYVQ"
      >
        08:00
      </td>
      <td
        className="sc-jKJlTe kwLYVQ"
      >
        Will Hall
      </td>
      <td
        className="sc-jKJlTe kwLYVQ"
      >
        -
      </td>
    </tr>
    <tr>
      <td
        className="sc-jKJlTe kwLYVQ"
      >
        09:00
      </td>
      <td
        className="sc-jKJlTe kwLYVQ"
      >
        Barnany Merrill
      </td>
      <td
        className="sc-jKJlTe kwLYVQ"
      >
        -
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Simple/TextInput Default 1`] = `
<div
  className="sc-eNQAEJ oiBWJ"
>
  <input
    className="sc-hMqMXs jUltJm"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Type Here"
    type="text"
    value=""
  />
  <div
    className="sc-kEYyzF goleI"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;
